--- a/styles.css
+++ b/styles.css
@@ -491,7 +491,7 @@ body {
 
 /* CTA Banner */
 .about-cta-banner {
-  background: url('https://i.postimg.cc/L5K5kXN4/cta-background.jpg') center/cover no-repeat;
+  background: url('image/17.png') center/cover no-repeat;
   padding: 5rem 0;
   text-align: center;
   color: #111;
